--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,21 @@
     android:gravity="center"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/etiqurta1"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:background="#CDDC39"
         android:paddingLeft="90sp"
         android:text="Hola mundo "/>
     <Button
+        android:id="@+id/init"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:textSize="40dp"
         android:text="Iniciar"/>
     <EditText
+        android:id="@+id/iniciar2"
         android:layout_width="200sp"
         android:layout_height="100sp"
         android:hint="Teclea aqui tu pass"
